Fix scrollbar appearing

--- a/apps/frontend/src/components/Layout/Layout.module.scss
+++ b/apps/frontend/src/components/Layout/Layout.module.scss
@@ -10,5 +10,5 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	overflow-x: scroll;
+	overflow-x: auto;
 }
